--- a/examples/lowrouter-basic/about.html
+++ b/examples/lowrouter-basic/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>About</title>
-  <link rel="icon" type="image/x-icon" href="./public/vite.svg" />
+  <link rel="icon" type="image/x-icon" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
