Make router working

--- a/examples/lowrouter-basic/about.html
+++ b/examples/lowrouter-basic/about.html
@@ -13,12 +13,11 @@
     <nav>
       <a class="link" href="/">home</a> /
       <a class="link" href="/about">about</a> /
+      <a class="link" href="/about/testId/">about/:id</a> /
       <a class="link" href="/notexist">notexist</a>
     </nav>
-    <div class="App_stack">
-      <div class="AboutPage">
+    <div class="stack">
         About
-      </div>
     </div>
   </main>
 </div>
