--- a/examples/lowrouter-basic/index.html
+++ b/examples/lowrouter-basic/index.html
@@ -13,16 +13,15 @@
     <nav>
       <a class="link" href="/">home</a> /
       <a class="link" href="/about">about</a> /
+      <a class="link" href="/about/testId/">about/:id</a> /
       <a class="link" href="/notexist">notexist</a>
     </nav>
-    <div class="App_stack">
-      <div class="HomePage">
-        Home
-      </div>
+    <div class="stack">
+       Home
     </div>
   </main>
 </div>
 
-<script type="module" src="./src/index.ts"></script>
+<script type="module" src="src/index.ts"></script>
 </body>
 </html>
