Implement new compose struct

--- a/examples/lowrouter-compose/contact.html
+++ b/examples/lowrouter-compose/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>About</title>
+  <title>Contact</title>
   <link rel="icon" type="image/x-icon" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
@@ -17,8 +17,8 @@
       <a class="link" href="/notexist">notexist</a>
     </nav>
     <div class="stack">
-      <div class="About">
-        About
+      <div class="Contact">
+        Contact
       </div>
     </div>
   </main>
