--- a/examples/lowrouter-compose/index.html
+++ b/examples/lowrouter-compose/index.html
@@ -13,11 +13,13 @@
     <nav>
       <a class="link" href="/">home</a> /
       <a class="link" href="/about">about</a> /
-      <a class="link" href="/about/testId/">about/:id</a> /
+      <a class="link" href="/contact">contact</a> /
       <a class="link" href="/notexist">notexist</a>
     </nav>
     <div class="stack">
-       Home
+      <div class="Home">
+         Home
+      </div>
     </div>
   </main>
 </div>
