Continue testing context stack

--- a/examples/lowrouter-compose/index.html
+++ b/examples/lowrouter-compose/index.html
@@ -19,6 +19,7 @@
     <div class="stack">
       <div class="Home">
          Home
+        <button class="Button Home_button">Button</button>
       </div>
     </div>
   </main>
