--- a/examples/lowrouter-compose/about.html
+++ b/examples/lowrouter-compose/about.html
@@ -13,12 +13,11 @@
     <nav>
       <a class="link" href="/">home</a> /
       <a class="link" href="/about">about</a> /
-      <a class="link" href="/contact">contact</a> /
-      <a class="link" href="/notexist">notexist</a>
+      <a class="link" href="/contact">contact</a>
     </nav>
     <div class="stack">
       <div class="About">
-        About
+        <div class="About_content content">About</div>
       </div>
     </div>
   </main>
