--- a/examples/lowrouter-compose/contact.html
+++ b/examples/lowrouter-compose/contact.html
@@ -13,13 +13,10 @@
     <nav>
       <a class="link" href="/">home</a> /
       <a class="link" href="/about">about</a> /
-      <a class="link" href="/contact">contact</a> /
-      <a class="link" href="/notexist">notexist</a>
+      <a class="link" href="/contact">contact</a>
     </nav>
     <div class="stack">
-      <div class="Contact">
-        Contact
-      </div>
+      <div class="Contact_content content">Contact</div>
     </div>
   </main>
 </div>
